--- a/dashboard.html
+++ b/dashboard.html
@@ -62,7 +62,7 @@
   
   </main>
 <div><a href="./withdrawal/withdrawal.html">withdraw</a>
-  <a href="./pay/deposit.html">deposit</a>
+  <a href="deposit.html">deposit</a>
 </div>
   <footer>
     <a href="home.html">Home</a>
