--- a/deposit.html
+++ b/deposit.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/deposit.css">
+  <link rel="stylesheet" href="deposit.css">
   <title>Deposit Funds</title>
 </head>
 <body>
@@ -16,6 +16,6 @@
     </form>
   </div>
   <script src="https://js.paystack.co/v1/inline.js"></script>
-  <script type="module" src="js/deposit.js"></script>
+  <script type="module" src="deposit.js"></script>
 </body>
 </html>
